2004-12-22  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (set_normalized_path): Allow empty pathnames.

2004-12-21  Christopher Faylor  <cgf@timesys.com>

	* spawn.cc (spawn_guts): Force parent to forget about P_DETACH'ed
	process.

2004-12-20  Christopher Faylor  <cgf@timesys.com>

	* path.cc (normalize_win32_path): Remove unneeded check for dots.

2004-12-20  Christopher Faylor  <cgf@timesys.com>

	* path.cc (normalize_posix_path): Remove unneeded check for dots.
	(path_conv::set_normalized_path): Strip trailing dots, similarly to
	what had previously been done for the win32 path.

2004-12-18  Christopher Faylor  <cgf@timesys.com>

	* path.cc (normalize_win32_path): Make third arg pass-by reference.
	Reorganize slightly to eliminate extra variables.
	(normalize_posix_path): Ditto.
	(path_conv::check): Reflect change in arguments.
	(mount_info::conv_to_posix_path): Ditto.
	(mount_info::add_item): Ditto.

2004-12-18  Christopher Faylor  <cgf@timesys.com>

	* child_info.h (CURR_CHILD_INFO_MAGIC): Use updated value.

2004-12-18  Christopher Faylor  <cgf@timesys.com>
	    Pierre Humblet <pierre.humblet@ieee.org>

	* path.cc (path_conv::check): Check the output Win32 path for trailing
	spaces and dots, not the input path.  Disallow all use of foo./bar
	since consistently getting this right is time consuming.  Remove
	strange test for "unc\" since no one seems to know what it's for.

2004-12-18  Chris January  <chris@atomice.net>

	* fhandler_proc.cc (proc_listing): Add entry for "self".
	(proc_fhandlers): Add entry for "self".
	* fhandler_process.cc (fhandler_process::fstate): Handle "self".
	(fhandler_process::open): Handle "self".

2004-12-17  Christopher Faylor  <cgf@timesys.com>

	* sigproc.cc (proc_subproc): Fix long-standing problem.  Only wait for
	"all processes" if pid == -1 -- not just if pid is negative.
	(proc_can_be_signalled): Fix another long-standing problem.  Set
	correct errno when detecting an exited process.
